Removed vertical align and fixed spacing.

--- a/css/modules.css
+++ b/css/modules.css
@@ -796,8 +796,6 @@ textarea {
   background-color: #fff;
   border: 2px solid #666;
   border-radius: 0;
-
-  vertical-align: middle;
 }
 
 label {
